--- a/week2/task2.Rmd
+++ b/week2/task2.Rmd
@@ -1,11 +1,13 @@
-source('pttTestFunction.R')
-id = c(6910:6914)
-URL = paste0("https://www.ptt.cc/bbs/movie/index",id,".html")
-filename = paste0(id, ".txt")
-pttTestFunction(URL[2], filename[2])
-mapply(pttTestFunction, 
-       URL = URL, filename = filename)
-
+---
+title: "task2"
+author: "yang"
+date: "2018年7月11日"
+output: html_document
+---
+#網路爬蟲
+##利用ptt省錢版爬蟲
+#文本清理
+```{r }
 rm(list=ls(all.names = TRUE))
 library(NLP)
 library(tm)
@@ -25,8 +27,25 @@ docs <- tm_map(docs, toSpace, "※")
 docs <- tm_map(docs, toSpace, "◆")
 docs <- tm_map(docs, toSpace, "‧")
 docs <- tm_map(docs, toSpace, "的")
+docs <- tm_map(docs, toSpace, "推")
+docs <- tm_map(docs, toSpace, "了")
+docs <- tm_map(docs, toSpace, "有")
+docs <- tm_map(docs, toSpace, "噓")
+docs <- tm_map(docs, toSpace, "沒")
+docs <- tm_map(docs, toSpace, "在")
+docs <- tm_map(docs, toSpace, "會")
+docs <- tm_map(docs, toSpace, "也")
+docs <- tm_map(docs, toSpace, "嗎")
+docs <- tm_map(docs, toSpace, "都")
+docs <- tm_map(docs, toSpace, "不")
+docs <- tm_map(docs, toSpace, "就")
+docs <- tm_map(docs, toSpace, "好")
+docs <- tm_map(docs, toSpace, "喔")
 docs <- tm_map(docs, toSpace, "我")
 docs <- tm_map(docs, toSpace, "是")
+docs <- tm_map(docs, toSpace, "吧")
+docs <- tm_map(docs, toSpace, "還")
+docs <- tm_map(docs, toSpace, "可以")
 docs <- tm_map(docs, toSpace, "看板")
 docs <- tm_map(docs, toSpace, "作者")
 docs <- tm_map(docs, toSpace, "發信站")
@@ -38,7 +57,9 @@ docs <- tm_map(docs, removePunctuation)
 docs <- tm_map(docs, removeNumbers)
 docs <- tm_map(docs, stripWhitespace)
 docs
-
+```
+#詞頻矩陣
+```{r}
 mixseg = worker()
 jieba_tokenizer=function(d){
   unlist(segment(d[[1]],mixseg))
@@ -48,10 +69,14 @@ freqFrame = as.data.frame(table(unlist(seg)))
 freqFrame = freqFrame[order(freqFrame$Freq,decreasing=TRUE), ]
 library(knitr)
 kable(head(freqFrame), format = "markdown")
-
+```
+#文字雲
+```{r}
 wordcloud(freqFrame$Var1,freqFrame$Freq,
           scale=c(5,0.1),min.freq=50,max.words=150,
           random.order=TRUE, random.color=FALSE, 
           rot.per=.1, colors=brewer.pal(8, "Dark2"),
           ordered.colors=FALSE,use.r.layout=FALSE,
           fixed.asp=TRUE)
+
+```
