--- a/week1/note2.Rmd
+++ b/week1/note2.Rmd
@@ -5,223 +5,648 @@ date: "July 10, 2018"
 output: html_document
 ---
 
-# note
+# Introduction to R
+## know the function
+```{r}
+help(mean)
+args(mean)
+```
 
-## know the function<br />
-help()<br />
-args()<br />
+## operator
+### numeric
+*only numeric can use numeric operator
+```{r}
+3 + 3 #加法
+```
+```{r}
+3 - 3 #減法
+```
+```{r}
+3 * 3 #乘法
+```
+```{r}
+3 / 3 #除法，答案為小數
+```
+```{r}
+3 %% 3 #餘數
+```
+### logical
+####and
+```{r}
+c(T, T, F) & c(T, F, F)#and
+c(T, T, F) && c(T, F, F)#only the first one
+```
+####or
+```{r}
+c(T, T, F) | c(T, F, F)
+c(T, T, F) || c(T, F, F)#only the first one
+```
+####not
+```{r}
+!c(T, T, F)
+```
+####Watch out: 3 < x < 7 to check if x is between 3 and 7 will not work; you'll need 3 < x & x < 7 for that.
 
-## operator<br />
+## condition<br />
+###注意對齊及層級關係
+```{r}
+number = 4
+if (number < 10) {
+  if (number < 5) {
+    result <- "extra small"
+  } else {
+    result <- "small"
+  }
+} else if (number < 100) {
+  result <- "medium"
+} else {
+  result <- "large"
+}
+print(result)
+```
 
-### numeric<br />
-plus:1+1<br />
-minus:2-1<br />
-multiple:2*2<br />
-divide(can be float):5/3<br />
-remainder:5%%3<br />
-*only numeric can use numeric operator <br />
+## loops
+###Indefinite Loops(while)
+```{r}
+i <- 1
+while (i <= 10) {
+  print(3*i)
+  if (3*i%%8 == 0) {
+    break
+  }
+  i <- i + 1
+}
+```
+### Definite Loops(for)
+#### version 1
+```{r}
+nyc <- list(pop = 8405837, 
+            boroughs = c("Manhattan", "Bronx", "Brooklyn", "Queens", "Staten Island"), 
+            capital = FALSE)
+# Loop version 1
+for (p in nyc) {
+  print(p)
+}
+```
+#### version 2
+```{r}
+for (i in 1:length(nyc)) {
+  print(nyc[[i]])
+}
+```
+###for loop應用
+#### with matrix
+```{r}
+ttt <- matrix(c('O',NA,'X',NA,'O','O','X',NA,'X'), nrow = 3, byrow = T)#建構矩陣
+ttt
+```
+```{r}
+for (i in 1:nrow(ttt)) {
+  for (j in 1:ncol(ttt)) {
+    print(paste("On row", i ,"and column", j ,"the board contains" ,ttt[i,j]))
+  }
+}
+```
+```{r}
+for (i in 1) {#只抓出第一列
+  for (j in 1:ncol(ttt)) {
+    print(paste("On row", i ,"and column", j ,"the board contains" ,ttt[i,j]))
+  }
+}
+```
+####抓句中字母
+```{r}
+rquote <- "rSTUDIO needs lots of practice!"
+chars <- strsplit(rquote, split = "")[[1]]#strspilt()將句子裁切，""中放裁切條件
+chars
+rcount <- 0
+for (char in chars) {
+  if(char == 'r') {
+    rcount <- rcount + 1
+  }
+  if(char == 'u') {
+    break
+  }
+}
+rcount
+```
+## variable
+### type
+```{r comment=""}
+class(4.5)   
+```
+```{r}
+class(3L) #Capital 'L' after an integer forces it to be stored as an integer.
+class(4)
+```
+```{r}
+class(TRUE)    
+```
+```{r}
+class("string")
+```
+### operator of variable
+```{r}
+4.5 + 3
+3.5+3L
+```
+```{r error = TRUE,results = "hide"}
+3.5 + 'three'
+```
 
-### logical<br />
-AND:&(only the first one &&)<br />
-OR:|(only the first one ||)<br />
-Watch out: 3 < x < 7 to check if x is between 3 and 7 will not work; you'll need 3 < x & x < 7 for that.<br />
-<br />
-
-### condition<br />
-if (condition1) {<br />
-  expr1<br />
-} else if (condition2) {<br />
-  expr2<br />
-} else if (condition3) {<br />
-  expr3<br />
-} else {<br />
-  expr4<br />
-}<br />
-
-### while<br />
-while (condition1) {<br />
-  expr1<br />
-  if (condition2) {<br />
-    break<br />
-  }<br />
-  if (condition3) {<br />
-    expr1<br />
-  } else {<br />
-    expr1<br />
-  }<br />
-  
-### for<br />
-primes <- c(2, 3, 5, 7, 11, 13)<br />
-
-#### loop version 1<br />
-for (p in primes) {<br />
-  print(p)<br />
-}<br />
-
-#### loop version 2<br />
-for (i in 1:length(primes)) {<br />
-  print(primes[i])<br />
-}<br />
-<br />
-
-## variable<br />
-x<-2<br />
-x<-string<br />
-
-### type<br />
-numerics ex:4.5<br />
-integers ex:4<br />
-logical ex:TRUE FALSE<br />
-characters ex:"string"<br />
-*if you wan to know the type, use:class()<br />
-<br />
-
-## Vectors<br />
-with the combine function c()<br />
-
-### choose<br />
-if knowing the name: ["string"]<br />
-choose more than one: [c("Monday","Tuesday")]<br />
-if knowing the order:[1]<br />
-choose more than one:[c(2,3,4)]equal to [2:4]<br />
-
-### combine<br />
-c(vector1,vector2)<br />
-
-### naming<br />
-names()<br />
-ex:poker_vector <- c(140, -50, 20, -120, 240)<br />
-ex:names(poker_vector) <- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")<br />
-ex:days_vector<- c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")<br />
-      names(poker_vector) <-   days_vector<br />
-      
-### sum()<br />
-add all the numbers in the vector OR count something<br />
-
-### mean()<br />
-average all the numbers in the vector<br />
-
+## Vectors
+### make it
+```{r}
+vector1 <- c(100,300,500)
+vector2 <- c(200,200,-100)
+vector3 <- vector1 + vector2 #向量能直接進行運算
+vector3
+vector4<-c(vector1,vector2)
+vector4
+```
+### naming
+#### method1
+```{r comment=""}
+names(vector3) <- c('America','Frances','Japan') #用names替向量命名
+vector3
+```
+#### method2
+```{r comment=""}
+name<-c('America','Frances','Japan')
+names(vector3)<-name
+vector3
+```
+###operator
+```{r}
+#使用sum向量加總
+total <- sum(vector3) 
+total
+```
+```{r}
+#使用mean計算平均值
+mean <- mean(vector3) 
+mean
+```
+### choosing
+####if knowing the order:[1]注意1是第一項
+```{r}
+select_vec1 <- vector3[1] 
+select_vec1
+select_vec2 <- vector3[1:2] 
+select_vec2
+select_vec3 <- vector3[c(1,2)] 
+select_vec3
+```
+#### if knowing the name: ["string"]
+```{r}
+select_vec4 <- vector3["America"] 
+select_vec4
+select_vec5 <- vector3[c("America","Frances")] 
+select_vec5
+```
 ### separate string and save<br />
-strsplit(rquote, split = "")[[1]]<br />
+```{r}
+rquote<-(c("Everyday is the best day.","Isn't it?"))
+strsplit(rquote, split = " ")
+```
+```{r}
+strsplit(rquote, split = " ")[[1]]
+```
+
+## Matrix
+### make it
+```{r}
+#星際大戰票房
+new_hope <- c(460.998, 314.4)
+empire_strikes <- c(290.475, 247.900)
+return_jedi <- c(309.306, 165.8)
+#宣告 box_office(vector)
+box_office <- c(new_hope, empire_strikes, return_jedi)
+#建立 star_wars_matrix
+star_wars_matrix <- matrix(box_office, byrow = T, nrow = 3) 
+#一個具有 3 列(narrow = 3)的矩陣，數值(box_office)依序以列(byrow = TRUE)方向填入
+star_wars_matrix
+```
+### naming
+#### method1
+```{r}
+#用來命名的向量 region 與 titles
+region <- c("US", "non-US")
+titles <- c("A New Hope", "The Empire Strikes Back", "Return of the Jedi")
+#colnames()是欄命名function
+colnames(star_wars_matrix) <- region
+#rownames()是列命名function
+rownames(star_wars_matrix) <- titles
+star_wars_matrix
+```
+#### method2
+```{r}
+#dimnames()是整體命名function
+dimnames(star_wars_matrix) = list(c("A New Hope", "The Empire Strikes Back", "Return of the Jedi"),c("US", "non-US"))
+star_wars_matrix
+```
+### operator
+```{r}
+#rowSums()列總和(colSums()欄總和)
+worldwide <- rowSums(star_wars_matrix)
+worldwide
+```
+```{r}
+#cbind()欄合併(rbind()列合併)
+all_wars_matrix <- cbind(star_wars_matrix, worldwide)
+all_wars_matrix
+```
+### choose
+####使用[列,欄]，來選取
+####連續選取以冒號連結
+####全選留白
+```{r}
+#選出全部電影的美國票房收入
+us_all <- all_wars_matrix[,1]
+us_all
+```
+```{r}
+#選出前兩部電影的非美國票房收入
+non_us_some <- all_wars_matrix[1:2,2]
+non_us_some
+```
+
+## factors
+###2 kinds: nominal categorical variable  and  ordinal categorical variable
+###will keep original vector
 <br />
+### make it
+####nominal categorical variable，無法在類別之間比較好壞
+```{r}
+animals_vector <- c("Elephant", "Giraffe", "Donkey", "Horse")
+factor_animals_vector <- factor(animals_vector)
+factor_animals_vector
+```
+####ordinal categorical variable，天生有比較特性
+```{r}
+temperature_vector <- c("High", "Low", "High","Low", "Medium")
+factor_temperature_vector <- factor(temperature_vector, order = TRUE, levels = c("Low", "Medium", "High"))
+factor_temperature_vector
+```
+###naming
+```{r}
+survey_vector <- c("M", "F", "F", "M", "M")
+factor_survey_vector <- factor(survey_vector)
+factor_survey_vector
+#使用levels()重新命名級別，預設以字母排序,要注意順序
+levels(factor_survey_vector) <- c('Female', 'Male')
+factor_survey_vector
+```
+```{r}
+#overlook the factor，使用summary()產出摘要
+#注意summary(survey_vector)結果不同，factoris better than vector
+summary(survey_vector)
 
-## Matrix<br />
-
-### construct a matrix<br />
-matrix(1:9, byrow = TRUE, nrow = 3)<br />
-
-### naming<br />
-rownames(matrix_name) <- row_names_vector<br />
-colnames(matrix_name) <- col_names_vector<br />
-dimnames = list(c("A New Hope", "The Empire Strikes Back", "Return of the Jedi"),c("US", "non-US")))<br />
-
-### sum<br />
-use rowSums()or colSums()<br />
-
-### add rows or columes<br />
-use cbind()or rbind()<br />
-ex:big_matrix <- cbind(matrix1, matrix2, vector1)<br />
-
-### choose<br />
-my_matrix[1:3,2:4]<br />
-choose all of them:my_matrix[,]<br />
-
-### example<br />
-star_wars_matrix <- matrix(box_office, nrow = 3, byrow = TRUE)<br />
-<br />
-
-## factors<br />
-2 kinds: nominal categorical variable  and  ordinal categorical variable<br />
-will keep original vector<br />
-
-### construct factor<br />
-factor()<br />
-factor(vector_name, order = TRUE, levels = c("Low", "Medium", "High"))<br />
-
-### change order <br />
-use levels(), have a look on original order <br />
-
-### overlook the factor<br />
-summary(),factoris better than vector<br />
-<br />
+summary(factor_survey_vector)
+```
+###比大小
+```{r}
+#使用factor()建立順序類別
+speed_vector <- c("fast", "slow", "slow", "fast", "insane")
+factor_speed_vector <- factor(speed_vector, ordered = TRUE, levels = c("slow", "fast", "insane"))
+factor_speed_vector
+#選出資料
+da2 <- factor_speed_vector[2]
+da5 <- factor_speed_vector[5]
+da2
+da5
+#資料分析師 2 是否比資料分析師 5 快？
+da2 > da5
+```
 
 ## dataframe<br />
-
-### construct<br />
+### 可以儲存各種類型資料
+### make it
 data.frame()<br />
+### choosing
+```{r}
+head(mtcars)#head()用來顯示dataframe的前六項
+```
+```{r}
+tail(mtcars)#tail()用來顯示dataframe的後六項
+```
+```{r}
+str(mtcars)#str()用來快速了解dataframe結構
+```
+```{r}
+mtcars$qsec#選取資料框內容，以$連接欄列名稱
+```
+```{r}
+subset(mtcars, subset = qsec > 20)#使用subset()設定篩選條件
+```
+```{r}
+### order()重新以欄列位數值排列
+mtcars[order(mtcars$qsec),]
+```
 
-### check part of data<br />
-head()<br />
-tail()<br />
-str()<br />
+## list
+###can save anything
+### make it
+```{r}
+#使用list()組合各種資料，同時分別命名
+my_vector <- 1:10
+my_matrix <- matrix(1:9, ncol = 3)
+my_df <- mtcars[1:3,1:5]
+my_list <- list(vec = my_vector, mat = my_matrix, df = my_df)
+my_list
+```
+### naming
+####method1
+```{r}
+names(my_list) <- c("vector", "matrix","dataframe")
+my_list
+```
+####method2(construct and name it)
+```{r}
+my_list2 <- list("vector" = my_vector, "matrix" = my_matrix ,"dataframe"=my_df )
+my_list2
+```
+### choosing
+```{r}
+#運用[[]]選出清單中的特定資料，再使用[]選出該指定資料的內容
+my_list[["dataframe"]][2,]
+```
+```{r}
+my_list[[1]][1]
+```
+```{r}
+my_list$matrix
+```
+### add new thing
+```{r}
+vecme<-c(1,2,3,4,5)
+ext_list <- c(my_list, "my_vvec" = vecme)
+ext_list
+```
 
-### choose<br />
-colume:dataframe_name$col_name<br />
-subset(dataframe_name, subset = some_condition)<br />
 
-### order<br />
-order()<br />
-dataframe_name[order(dataframe_name),]<br />
-<br />
 
-## list<br />
-can save anything<br />
 
-### construct<br />
-list()<br />
 
-### naming<br />
-my_list <- list(your_comp1, your_comp2)<br />
-names(my_list) <- c("name1", "name2")<br />
-<br />
-my_list <- list(name1 = your_comp1, name2 = your_comp2)<br />
+## function
+### introduce
+```{r}
+linkedin <- c(16, 9, 13, 5, NA, 17, 14)
+facebook <- c(17, NA, 5, 16, 8, 13, 14)
+mean(abs(linkedin - facebook),na.rm = T)#na.rm決定是否排除NA，T為排除
+```
+### write a function
+```{r}
+two_dice <- function() {
+  possibilities <- 1:6
+  dice1 <- sample(possibilities, size = 1)#sample()隨機選數字
+  dice2 <- sample(possibilities, size = 1)
+  return (dice1 + dice2)
+}
+two_dice()#每次的結果不同
+```
 
-### choose<br />
-list_name[[2]][1]<br />
-list_name[["reviews"]]<br />
-list_name$reviews<br />
-
-### add new thing<br />
-ext_list <- c(my_list, my_name = anything)<br />
-<br />
-
-### write a function<br />
-my_fun <- function(arg1, arg2) {<br />
-  body<br />
-}<br />
-
-### using advanced function<br />
+### using advanced function
 install.packages()<br />
+```{r}
+if(!require(ggplot2))install.packages("ggplot2",repos = "http://cran.us.r-project.org")
+if(!require(dplyr))install.packages("dplyr",repos = "http://cran.us.r-project.org")
+#install.packages("gapminder")
+if(!require(gapminder))install.packages("gapminder",repos = "http://cran.us.r-project.org")
+```
 
-#### Chunk 1<br />
-library(data.table)<br />
-require(rjson)<br />
+```{r}
+library(ggplot2)
+library(dplyr)
+library(gapminder)
 
-#### Chunk 2<br />
-library("data.table")<br />
-require(rjson)<br />
+```
 
-## dataframe calculate<br />
-library(gapminder)<br />
-library(dplyr)<br />
+##applt 家族
+###lapply
+*lapply(list/vector, function)<br />
+*Apply function over list or vector.<br />
+*Always returns a list.<br />
+*unlist(lapply()) to return a vector.<br />
 
-### choose and arrange<br />
-gapminder %>%<br />
-filter(year==1957)%>%<br />
-mutate(lifeExpMonths=12*lifeExp)%>%<br />
-arrange(desc(pop))<br />
+```{r}
+nyc
+```
+```{r}
+lapply(nyc, class)
+```
+```{r}
+unlist(lapply(nyc, class))
+```
+```{r}
+lapply(list(1,2,3), function(x, factor) {#Using anonymous functions
+  x * factor
+}
+, factor = 3)
+```
+###Sapply
+*sometimes similar to unlist(lapply())<br />
+```{r}
+lapply(list(runif (10), runif (10)), 
+       function(x) c(min = min(x), mean = mean(x), max = max(x)))
+```
+```{r}
+sapply(list(runif (10), runif (10)), 
+       function(x) c(min = min(x), mean = mean(x), max = max(x)))
+```
+```{r}
+unlist(lapply(list(runif (10), runif (10)), 
+       function(x) c(min = min(x), mean = mean(x), max = max(x))))
+```
+###Vapply
+*vapply(list/vector, function, format)<br />
+*explicitly specify output format.<br />
+```{r}
+#numeric(3) is the format here.
+#numeric refers to classes of variables.
+#'3' refers to length.
+vapply(list(runif (10), runif (10)), 
+       function(x) c(min = min(x), mean = mean(x), max = max(x)), numeric(3))
+```
+##other functions
+abs(): Calculate the absolute value.<br />
+sum(): Calculate the sum of all the values in a data structure.<br />
+mean(): Calculate the arithmetic mean.<br />
+round(): Round the values to 0 decimal places by default.<br />
 
-### visable <br />
-library(ggplot2) <br />
-ggplot(gapminder_1952, aes(x = pop, y = lifeExp, color = continent,size=gdpPercap)) +<br />
-  geom_point()+<br />
-  geom_line()+<br />
-  geom_col()+<br />
-  geom_histogram(binwidth=5)<br />
-  geom_boxplot()<br />
-  scale_x_log10()+<br />
-  facet_wrap(~ continent)+<br />
-  expand_limits(y=0)<br />
-  
-### summarize<br />
-gapminder %>% summarize(medianLifeExp=median(lifeExp),maxGdpPercap=max(gdpPercap))<br />
+seq(): Generate sequences, by specifying the from, to, and by arguments.<br />
+```{r}
+seq1 = seq(1, 7, by = 2)
+seq1
+```
+rep(): Replicate elements of vectors and lists.<br />
+```{r}
+rep1 = rep(seq1, times = 2)
+rep1
+```
+sort(): Sort a vector in ascending order. Works on numerics, but also on character strings and logicals.<br />
+```{r}
+sort1 = sort(rep1, decreasing = T)
+sort1
+```
+rev(): Reverse the elements in a data structures for which reversal is defined.<br />
+```{r}
+rev1 = rev(sort1)
+rev1
+```
+str(): Display the structure of any R object.<br />
+append(): Merge vectors or lists.<br />
+```{r}
+append1 = append(sort1, rev1)
+append1
+```
+is.*(): Check for the class of an R object.<br />
+as.*(): Convert an R object from one class to another.<br />
+unlist(): Flatten (possibly embedded) lists to produce a vector.<br />
+
+##Regular Expressions
+
+###Grepl & Grep
+grepl(): Returns TRUE or FALSE<br />
+grep(): Returns a vector of indices <br />
+
+####^代表開頭，"@.*\\.edu$" , 代表@開始 ，".edu"結尾，其中".*"表任何字串，"\\."表真的"."
+```{r}
+emails <- c("john.doe@ivyleague.edu", "education@world.gov", "dalai.lama@peace.org",
+            "invalid.edu", "quant@bigdatacollege.edu", "cookie.monster@sesame.tv", "kiara@@fakemail.edu")
+hits1 =grepl(emails, pattern = '@.*\\.edu$')
+hits1
+hits2 =grep(emails, pattern = '@.*\\.edu$')
+hits2
+emails[hits1]
+emails[hits2]
+```
+###Sub & Gsub
+sub(): Specify a ‘replacement’ replace a ‘pattern’, and it only replaces the first match.
+gsub(): Replaces all matches.
+```{r}
+#sub(pattern, replacement, object)
+sub("@.*\\.edu$", "@datacamp.edu", emails)
+gsub("@.*\\.edu$", "@datacamp.edu", emails)
+```
+```{r}
+awards <- c("Won 1 Oscar.",
+  "Won 1 Oscar. Another 9 wins & 24 nominations.",
+  "1 win and 2 nominations.",
+  "2 wins & 3 nominations.",
+  "Nominated for 2 Golden Globes. 1 more win & 2 nominations.",
+  "4 wins & 1 nomination.")
+sub(".*\\s([0-9]+)\\snomination.*$", "\\1", awards)
+gsub(".*\\s([0-9]+)\\snomination.*$", "\\1", awards)
+```
+##Times and Dates
+1970/01/01 is the common origin for representing times and dates in programming languages.<br />
+Sys.Date(): To know the date.
+```{r}
+str1 <- "2012-03-15"
+class(str1)
+date1 <- as.Date(str1, format = '%Y-%m-%d')
+class(date1)
+```
+Sys.time(): To know the time.
+```{r}
+str2 <- "2012-3-12 14:23:08"
+class(str2)
+time2 <- as.POSIXct(str2, format = '%Y-%m-%d %H:%M:%S')
+class(time2)
+```
+```{r}
+#改變格式
+format(time2, '%I:%M%p')
+```
+```{r}
+#Calculations with Dates & Times
+as.Date("2015-03-12") - as.Date("2015-02-27")
+birth <- as.POSIXct("1879-03-14 14:37:23")
+death <- as.POSIXct("1955-04-18 03:47:12")
+einstein <- death - birth
+einstein
+```
+
+##繪製圖表
+### filter()
+```{r}
+gapminder %>%
+  filter(country == 'China', year == 2002)
+```
+###arrange()，the gapminder itself is unchanged.
+```{r}
+gapminder %>%
+  filter(year == 1957) %>%
+  arrange(desc(pop))
+```
+###mutuate() ,to change & add an variable
+```{r}
+gapminder %>%
+  filter(year == 2007) %>%
+  mutate(GDP = pop * gdpPercap) %>%
+  arrange(desc(GDP))
+```
+## Visualization
+```{r}
+gapminder_1952 <- gapminder %>%
+  filter(year == 1952)
+
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp, color = continent, size = gdpPercap)) +
+  geom_point()+
+  scale_x_log10()#坐標軸以對數值表示
+  expand_limits(y=0)#y軸從0開始
+```
+###faceting --separate graphs respectively for easier understanding.
+```{r}
+ggplot(gapminder_1952, aes(x = pop, y = lifeExp)) +
+  geom_point() +
+  scale_x_log10() +
+  facet_wrap(~ continent)
+```
+## summarize
+```{r}
+by_year_continent<-gapminder %>%
+  group_by(year, continent) %>%
+  summarize(medianLifeExp = median(lifeExp), medianGdpPercap = median(gdpPercap))
+by_year_continent
+```
+##Visualizing Summarized Data
+```{r}
+ggplot(by_year_continent, aes(x= year, y = medianGdpPercap,color = continent)) +
+  geom_point() +
+  expand_limits(y = 0)
+```
+
+##其他圖表
+###geom_line()
+```{r}
+ggplot(by_year_continent, aes(x = year, y = medianGdpPercap, color = continent)) +
+  geom_line() +
+  expand_limits(y = 0)
+```
+###geom_col()
+```{r}
+by_continent <- gapminder %>%
+  filter(year == 1952) %>%
+  group_by(continent) %>%
+  summarize(medianGdpPercap = median(gdpPercap))
+ggplot(by_continent, aes(x = continent, y = medianGdpPercap)) +
+  geom_col()
+```
+#geom_histogram()
+```{r}
+gapminder_1952 <- gapminder %>%
+  filter(year == 1952)
+ggplot(gapminder_1952, aes(x = pop)) +
+  geom_histogram(binwidth=0.3) +
+  scale_x_log10()
+```
+#geom_boxplot()
+```{r}
+#ggtitle() for adding title for the plot.
+ggplot(gapminder_1952, aes(x = continent, y = gdpPercap)) +
+  geom_boxplot() +
+  scale_y_log10() +
+  ggtitle("Comparing GDP per capita across continents")
+```
